# meow-backend

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
BookModel/: apps.py  models.py  searchs.py  tests.py
GraphModel/: models.py  searchs.py  tests.py
helm-charts/meow/: Chart.yaml  README.md  values.yaml
helm-charts/meow/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm-charts/meow/templates/tests/: test-connection.yaml
service/: searchs.py  tests.py
