[project]
name = "Meow"
version = "0.0.1"
description = ""
authors = [
    { name = "Lingi Wu", email = "edithwuly@163.com" },
    { name = "Yuchen Cheng", email = "rudeigerc@gmail.com" },
]
dependencies = [
    "django>=3.2.16",
    "py2neo>=2021.2.3",
    "pymysql>=1.0.2",
    "synonyms>=3.18.0",
    "numpy==1.21.6",
]
requires-python = ">=3.7,<3.11"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/meowgraph/meow-backend"
Repository = "https://github.com/meowgraph/meow-backend"

[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=5.0.4",
    "black>=22.10.0",
    "isort>=5.10.1",
]

[tool.pdm.scripts]
start = "python manage.py runserver 0.0.0.0:8000"

[[tool.pdm.source]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
verify_ssl = true
name = "tuna"

[tool.isort]
profile = "black"
lines_after_imports = 2
